ass2/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from d:\222 Semester\Principles of Programming Languages\Assignment\ass2\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "']'", "<INVALID>", "'auto'", "'break'", 
                     "'boolean'", "'do'", "'else'", "'false'", "'float'", 
                     "'for'", "'function'", "'if'", "'integer'", "'return'", 
                     "'string'", "'true'", "'while'", "'void'", "'out'", 
                     "'continue'", "'of'", "'inherit'", "'array'", "'('", 
                     "')'", "'.'", "','", "';'", "':'", "'{'", "'}'", "'='", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'::'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'_'", "'\"'", "'''" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "BOOLIT", "AUTO", 
                      "BREAK", "BOOLEAN", "DO", "ELSE", "FALSE", "FLOAT", 
                      "FOR", "FUNCTION", "IF", "INTEGER", "RETURN", "STRING", 
                      "TRUE", "WHILE", "VOID", "OUT", "CONTINUE", "OF", 
                      "INHERIT", "ARRAY", "LB", "RB", "DOT", "COMMA", "SEMICOLON", 
                      "COLON", "LPAREN", "RPAREN", "ASSIGN", "ADDOP", "NEGOP", 
                      "MULOP", "DIVOP", "REMAINOP", "NEGATION", "CONJUNCTION", 
                      "DISJUNCTION", "EQUAL", "NOTEQUAL", "LESSTHAN", "GREATERTHAN", 
                      "LTOE", "GTOE", "CONCAT", "IDENTIFIER", "FLOATLIT", 
                      "INTLIT", "STRINGLIT", "UNDERSCORE", "DOUBLEQUOTE", 
                      "SINGLEQUOTE", "COMMENTINLINE", "COMMENTBLOCK", "WS", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_notebnf = 1
    RULE_declare = 2
    RULE_arraylit = 3
    RULE_item = 4
    RULE_itemprime = 5
    RULE_variable = 6
    RULE_identifier_list = 7
    RULE_var_declare = 8
    RULE_variable_type = 9
    RULE_atomtype = 10
    RULE_array_type = 11
    RULE_array_size = 12
    RULE_first_decl = 13
    RULE_paratype = 14
    RULE_typ = 15
    RULE_intlitlist = 16
    RULE_floatlitlist = 17
    RULE_boolitlist = 18
    RULE_stringlitlist = 19
    RULE_arraylitlist = 20
    RULE_para_declare = 21
    RULE_list_para_declare_prime = 22
    RULE_one_para_declare = 23
    RULE_func_declare = 24
    RULE_function = 25
    RULE_return_type = 26
    RULE_expression = 27
    RULE_exp1 = 28
    RULE_exp2 = 29
    RULE_exp3 = 30
    RULE_exp4 = 31
    RULE_exp5 = 32
    RULE_exp6 = 33
    RULE_exp7 = 34
    RULE_exp8 = 35
    RULE_explist = 36
    RULE_function_call = 37
    RULE_value_list = 38
    RULE_valueprime = 39
    RULE_value = 40
    RULE_assign_statement = 41
    RULE_if_statement = 42
    RULE_for_statement = 43
    RULE_before_assign = 44
    RULE_while_statement = 45
    RULE_dowhile_statement = 46
    RULE_break_statement = 47
    RULE_continue_statement = 48
    RULE_return_statement = 49
    RULE_call_statement = 50
    RULE_block_statement = 51
    RULE_expressionlist = 52
    RULE_exprime = 53
    RULE_stmt_prime = 54
    RULE_stmt_list = 55
    RULE_stmt = 56

    ruleNames =  [ "program", "notebnf", "declare", "arraylit", "item", 
                   "itemprime", "variable", "identifier_list", "var_declare", 
                   "variable_type", "atomtype", "array_type", "array_size", 
                   "first_decl", "paratype", "typ", "intlitlist", "floatlitlist", 
                   "boolitlist", "stringlitlist", "arraylitlist", "para_declare", 
                   "list_para_declare_prime", "one_para_declare", "func_declare", 
                   "function", "return_type", "expression", "exp1", "exp2", 
                   "exp3", "exp4", "exp5", "exp6", "exp7", "exp8", "explist", 
                   "function_call", "value_list", "valueprime", "value", 
                   "assign_statement", "if_statement", "for_statement", 
                   "before_assign", "while_statement", "dowhile_statement", 
                   "break_statement", "continue_statement", "return_statement", 
                   "call_statement", "block_statement", "expressionlist", 
                   "exprime", "stmt_prime", "stmt_list", "stmt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    BOOLIT=3
    AUTO=4
    BREAK=5
    BOOLEAN=6
    DO=7
    ELSE=8
    FALSE=9
    FLOAT=10
    FOR=11
    FUNCTION=12
    IF=13
    INTEGER=14
    RETURN=15
    STRING=16
    TRUE=17
    WHILE=18
    VOID=19
    OUT=20
    CONTINUE=21
    OF=22
    INHERIT=23
    ARRAY=24
    LB=25
    RB=26
    DOT=27
    COMMA=28
    SEMICOLON=29
    COLON=30
    LPAREN=31
    RPAREN=32
    ASSIGN=33
    ADDOP=34
    NEGOP=35
    MULOP=36
    DIVOP=37
    REMAINOP=38
    NEGATION=39
    CONJUNCTION=40
    DISJUNCTION=41
    EQUAL=42
    NOTEQUAL=43
    LESSTHAN=44
    GREATERTHAN=45
    LTOE=46
    GTOE=47
    CONCAT=48
    IDENTIFIER=49
    FLOATLIT=50
    INTLIT=51
    STRINGLIT=52
    UNDERSCORE=53
    DOUBLEQUOTE=54
    SINGLEQUOTE=55
    COMMENTINLINE=56
    COMMENTBLOCK=57
    WS=58
    UNCLOSE_STRING=59
    ILLEGAL_ESCAPE=60
    ERROR_CHAR=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def notebnf(self):
            return self.getTypedRuleContext(MT22Parser.NotebnfContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.notebnf()
            self.state = 115
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NotebnfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare(self):
            return self.getTypedRuleContext(MT22Parser.DeclareContext,0)


        def notebnf(self):
            return self.getTypedRuleContext(MT22Parser.NotebnfContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_notebnf




    def notebnf(self):

        localctx = MT22Parser.NotebnfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_notebnf)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.declare()
                self.state = 118
                self.notebnf()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(MT22Parser.Var_declareContext,0)


        def func_declare(self):
            return self.getTypedRuleContext(MT22Parser.Func_declareContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declare




    def declare(self):

        localctx = MT22Parser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declare)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.var_declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.func_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraylitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(MT22Parser.LPAREN, 0)

        def item(self):
            return self.getTypedRuleContext(MT22Parser.ItemContext,0)


        def RPAREN(self):
            return self.getToken(MT22Parser.RPAREN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arraylit




    def arraylit(self):

        localctx = MT22Parser.ArraylitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arraylit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(MT22Parser.LPAREN)
            self.state = 128
            self.item()
            self.state = 129
            self.match(MT22Parser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def itemprime(self):
            return self.getTypedRuleContext(MT22Parser.ItemprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_item




    def item(self):

        localctx = MT22Parser.ItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_item)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLIT, MT22Parser.LB, MT22Parser.LPAREN, MT22Parser.NEGOP, MT22Parser.NEGATION, MT22Parser.IDENTIFIER, MT22Parser.FLOATLIT, MT22Parser.INTLIT, MT22Parser.STRINGLIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.itemprime()
                pass
            elif token in [MT22Parser.RPAREN]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(MT22Parser.VariableContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def itemprime(self):
            return self.getTypedRuleContext(MT22Parser.ItemprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_itemprime




    def itemprime(self):

        localctx = MT22Parser.ItemprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_itemprime)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.variable()
                self.state = 136
                self.match(MT22Parser.COMMA)
                self.state = 137
                self.itemprime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.variable()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def arraylit(self):
            return self.getTypedRuleContext(MT22Parser.ArraylitContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_variable




    def variable(self):

        localctx = MT22Parser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variable)
        try:
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLIT, MT22Parser.LB, MT22Parser.NEGOP, MT22Parser.NEGATION, MT22Parser.IDENTIFIER, MT22Parser.FLOATLIT, MT22Parser.INTLIT, MT22Parser.STRINGLIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.expression()
                pass
            elif token in [MT22Parser.LPAREN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.arraylit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Identifier_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def identifier_list(self):
            return self.getTypedRuleContext(MT22Parser.Identifier_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_identifier_list




    def identifier_list(self):

        localctx = MT22Parser.Identifier_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_identifier_list)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(MT22Parser.IDENTIFIER)
                self.state = 147
                self.match(MT22Parser.COMMA)
                self.state = 148
                self.identifier_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.match(MT22Parser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier_list(self):
            return self.getTypedRuleContext(MT22Parser.Identifier_listContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def variable_type(self):
            return self.getTypedRuleContext(MT22Parser.Variable_typeContext,0)


        def SEMICOLON(self):
            return self.getToken(MT22Parser.SEMICOLON, 0)

        def first_decl(self):
            return self.getTypedRuleContext(MT22Parser.First_declContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_declare




    def var_declare(self):

        localctx = MT22Parser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_var_declare)
        try:
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.identifier_list()
                self.state = 153
                self.match(MT22Parser.COLON)
                self.state = 154
                self.variable_type()
                self.state = 155
                self.match(MT22Parser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.first_decl()
                self.state = 158
                self.match(MT22Parser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomtype(self):
            return self.getTypedRuleContext(MT22Parser.AtomtypeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_variable_type




    def variable_type(self):

        localctx = MT22Parser.Variable_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_variable_type)
        try:
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.AUTO, MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.atomtype()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomtypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atomtype




    def atomtype(self):

        localctx = MT22Parser.AtomtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_atomtype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.AUTO) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def array_size(self):
            return self.getTypedRuleContext(MT22Parser.Array_sizeContext,0)


        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def atomtype(self):
            return self.getTypedRuleContext(MT22Parser.AtomtypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array_type




    def array_type(self):

        localctx = MT22Parser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(MT22Parser.ARRAY)
            self.state = 169
            self.match(MT22Parser.T__0)
            self.state = 170
            self.array_size()
            self.state = 171
            self.match(MT22Parser.T__1)
            self.state = 172
            self.match(MT22Parser.OF)
            self.state = 173
            self.atomtype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_sizeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def array_size(self):
            return self.getTypedRuleContext(MT22Parser.Array_sizeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array_size




    def array_size(self):

        localctx = MT22Parser.Array_sizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_array_size)
        try:
            self.state = 179
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.match(MT22Parser.INTLIT)
                self.state = 176
                self.match(MT22Parser.COMMA)
                self.state = 177
                self.array_size()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.match(MT22Parser.INTLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class First_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def first_decl(self):
            return self.getTypedRuleContext(MT22Parser.First_declContext,0)


        def value(self):
            return self.getTypedRuleContext(MT22Parser.ValueContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def paratype(self):
            return self.getTypedRuleContext(MT22Parser.ParatypeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_first_decl




    def first_decl(self):

        localctx = MT22Parser.First_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_first_decl)
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.match(MT22Parser.IDENTIFIER)
                self.state = 182
                self.match(MT22Parser.COMMA)
                self.state = 183
                self.first_decl()
                self.state = 184
                self.match(MT22Parser.COMMA)
                self.state = 185
                self.value()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 187
                self.match(MT22Parser.IDENTIFIER)
                self.state = 188
                self.match(MT22Parser.COLON)
                self.state = 189
                self.paratype()
                self.state = 190
                self.match(MT22Parser.ASSIGN)
                self.state = 191
                self.value()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParatypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
